--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -121,6 +121,9 @@
     <Filter Include="Source Files\render\rendertarget\canvas">
       <UniqueIdentifier>{cb745a0f-f3cc-4d2c-bbeb-bf0c95d28500}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\shaders\postprocess">
+      <UniqueIdentifier>{8cc2c4d6-5fee-454d-a949-899f803e192f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engine.h">
@@ -513,12 +516,6 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="resources\shaders\postprocess.frag">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
-    <None Include="resources\shaders\postprocess.vert">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
     <None Include="resources\shaders\default.frag">
       <Filter>Resource Files\shaders</Filter>
     </None>
@@ -557,6 +554,18 @@
     </None>
     <None Include="resources\shaders\model\normal\draw.frag">
       <Filter>Resource Files\shaders\model\normal</Filter>
+    </None>
+    <None Include="resources\shaders\postprocess\compositor.frag">
+      <Filter>Resource Files\shaders\postprocess</Filter>
+    </None>
+    <None Include="resources\shaders\postprocess\compositor.vert">
+      <Filter>Resource Files\shaders\postprocess</Filter>
+    </None>
+    <None Include="resources\shaders\postprocess\normal.frag">
+      <Filter>Resource Files\shaders\postprocess</Filter>
+    </None>
+    <None Include="resources\shaders\postprocess\normal.vert">
+      <Filter>Resource Files\shaders\postprocess</Filter>
     </None>
   </ItemGroup>
 </Project>
