--- a/gameengine/shaders.rc
+++ b/gameengine/shaders.rc
@@ -5,6 +5,7 @@ RCID_TF_POSTPROCESS_COMPOSITOR_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/
 RCID_TF_POSTPROCESS_COMPOSITOR_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess/compositor.vert"
 
 RCID_TF_POSTPROCESS_NORMAL_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess/normal.frag"
+RCID_TF_POSTPROCESS_NORMAL_GEOMSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess/normal.geom"
 RCID_TF_POSTPROCESS_NORMAL_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess/normal.vert"
 
 //default
