--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -225,7 +225,6 @@
     <ClInclude Include="src\scene\Camera.h" />
     <ClInclude Include="src\scene\Cubemap.h" />
     <ClInclude Include="src\scene\light\PointLight.h" />
-    <ClInclude Include="src\scene\LocallyMovable.h" />
     <ClInclude Include="src\scene\LocalTexture.h" />
     <ClInclude Include="src\scene\model\geometry\Geometry.h" />
     <ClInclude Include="src\scene\model\geometry\Patch.h" />
@@ -236,15 +235,16 @@
     <ClInclude Include="src\scene\model\Reflection.h" />
     <ClInclude Include="src\scene\Nameable.h" />
     <ClInclude Include="src\scene\OrientedBoundingBox.h" />
-    <ClInclude Include="src\scene\Positionable.h" />
     <ClInclude Include="src\scene\Referenceable.h" />
     <ClInclude Include="src\scene\RevisableResource.h" />
-    <ClInclude Include="src\scene\Rotatable.h" />
-    <ClInclude Include="src\scene\Scalable.h" />
     <ClInclude Include="src\scene\Scene.h" />
     <ClInclude Include="src\scene\SceneApproximation.h" />
     <ClInclude Include="src\scene\SceneChild.h" />
     <ClInclude Include="src\scene\Skybox.h" />
+    <ClInclude Include="src\scene\transformations\LocallyMovable.h" />
+    <ClInclude Include="src\scene\transformations\Positionable.h" />
+    <ClInclude Include="src\scene\transformations\Rotatable.h" />
+    <ClInclude Include="src\scene\transformations\Scalable.h" />
     <ClInclude Include="src\scene\VisBox.h" />
   </ItemGroup>
   <ItemGroup>
@@ -288,7 +288,6 @@
     <ClCompile Include="src\scene\Camera.cpp" />
     <ClCompile Include="src\scene\Cubemap.cpp" />
     <ClCompile Include="src\scene\light\PointLight.cpp" />
-    <ClCompile Include="src\scene\LocallyMovable.cpp" />
     <ClCompile Include="src\scene\LocalTexture.cpp" />
     <ClCompile Include="src\scene\model\geometry\Geometry.cpp" />
     <ClCompile Include="src\scene\model\geometry\Patch.cpp" />
@@ -299,15 +298,16 @@
     <ClCompile Include="src\scene\model\Reflection.cpp" />
     <ClCompile Include="src\scene\Nameable.cpp" />
     <ClCompile Include="src\scene\OrientedBoundingBox.cpp" />
-    <ClCompile Include="src\scene\Positionable.cpp" />
     <ClCompile Include="src\scene\Referenceable.cpp" />
     <ClCompile Include="src\scene\RevisableResource.cpp" />
-    <ClCompile Include="src\scene\Rotatable.cpp" />
-    <ClCompile Include="src\scene\Scalable.cpp" />
     <ClCompile Include="src\scene\Scene.cpp" />
     <ClCompile Include="src\scene\SceneApproximation.cpp" />
     <ClCompile Include="src\scene\SceneChild.cpp" />
     <ClCompile Include="src\scene\Skybox.cpp" />
+    <ClCompile Include="src\scene\transformations\LocallyMovable.cpp" />
+    <ClCompile Include="src\scene\transformations\Positionable.cpp" />
+    <ClCompile Include="src\scene\transformations\Rotatable.cpp" />
+    <ClCompile Include="src\scene\transformations\Scalable.cpp" />
     <ClCompile Include="src\scene\VisBox.cpp" />
   </ItemGroup>
   <ItemGroup>
