--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -200,6 +200,12 @@
     <ClInclude Include="src\render\controllers\ShadowController.h" />
     <ClInclude Include="src\render\controllers\SkyboxController.h" />
     <ClInclude Include="src\render\controllers\RenderController.h" />
+    <ClInclude Include="src\render\gltexture\GLTexture.h" />
+    <ClInclude Include="src\render\gltexture\GLTextureDataPreset.h" />
+    <ClInclude Include="src\render\gltexture\GLTextureFiltering.h" />
+    <ClInclude Include="src\render\gltexture\GLTextureFormat.h" />
+    <ClInclude Include="src\render\gltexture\GLTexturePreset.h" />
+    <ClInclude Include="src\render\gltexture\GLTextureType.h" />
     <ClInclude Include="src\render\renderable\CumulativeTexture.h" />
     <ClInclude Include="src\render\renderable\Renderable.h" />
     <ClInclude Include="src\render\renderer\NormalRenderer.h" />
@@ -215,12 +221,6 @@
     <ClInclude Include="src\render\rendertarget\texture\RenderTextureGroup.h" />
     <ClInclude Include="src\render\ShaderProgram.h" />
     <ClInclude Include="src\render\TargetType.h" />
-    <ClInclude Include="src\render\texture\Texture.h" />
-    <ClInclude Include="src\render\texture\TextureDataPreset.h" />
-    <ClInclude Include="src\render\texture\TextureFiltering.h" />
-    <ClInclude Include="src\render\texture\TextureFormat.h" />
-    <ClInclude Include="src\render\texture\TexturePreset.h" />
-    <ClInclude Include="src\render\texture\TextureType.h" />
     <ClInclude Include="src\Resource.h" />
     <ClInclude Include="src\scene\Camera.h" />
     <ClInclude Include="src\scene\Cubemap.h" />
@@ -265,6 +265,11 @@
     <ClCompile Include="src\render\controllers\RenderController.cpp" />
     <ClCompile Include="src\render\controllers\ShadowController.cpp" />
     <ClCompile Include="src\render\controllers\SkyboxController.cpp" />
+    <ClCompile Include="src\render\gltexture\GLTexture.cpp" />
+    <ClCompile Include="src\render\gltexture\GLTextureFiltering.cpp" />
+    <ClCompile Include="src\render\gltexture\GLTextureFormat.cpp" />
+    <ClCompile Include="src\render\gltexture\GLTexturePreset.cpp" />
+    <ClCompile Include="src\render\gltexture\GLTextureType.cpp" />
     <ClCompile Include="src\render\renderable\CumulativeTexture.cpp" />
     <ClCompile Include="src\render\renderable\Renderable.cpp" />
     <ClCompile Include="src\render\renderer\NormalRenderer.cpp" />
@@ -279,11 +284,6 @@
     <ClCompile Include="src\render\rendertarget\texture\RenderTextureGroup.cpp" />
     <ClCompile Include="src\render\ShaderProgram.cpp" />
     <ClCompile Include="src\render\TargetType.cpp" />
-    <ClCompile Include="src\render\texture\Texture.cpp" />
-    <ClCompile Include="src\render\texture\TextureFiltering.cpp" />
-    <ClCompile Include="src\render\texture\TextureFormat.cpp" />
-    <ClCompile Include="src\render\texture\TexturePreset.cpp" />
-    <ClCompile Include="src\render\texture\TextureType.cpp" />
     <ClCompile Include="src\Resource.cpp" />
     <ClCompile Include="src\scene\Camera.cpp" />
     <ClCompile Include="src\scene\Cubemap.cpp" />
