--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -225,7 +225,6 @@
     <ClInclude Include="src\scene\Camera.h" />
     <ClInclude Include="src\scene\Cubemap.h" />
     <ClInclude Include="src\scene\light\PointLight.h" />
-    <ClInclude Include="src\scene\LocalTexture.h" />
     <ClInclude Include="src\scene\model\geometry\Geometry.h" />
     <ClInclude Include="src\scene\model\geometry\Patch.h" />
     <ClInclude Include="src\scene\model\geometry\Polygonal.h" />
@@ -241,6 +240,7 @@
     <ClInclude Include="src\scene\SceneApproximation.h" />
     <ClInclude Include="src\scene\SceneChild.h" />
     <ClInclude Include="src\scene\Skybox.h" />
+    <ClInclude Include="src\scene\texture\Texture.h" />
     <ClInclude Include="src\scene\transformations\LocallyMovable.h" />
     <ClInclude Include="src\scene\transformations\Positionable.h" />
     <ClInclude Include="src\scene\transformations\Rotatable.h" />
@@ -288,7 +288,6 @@
     <ClCompile Include="src\scene\Camera.cpp" />
     <ClCompile Include="src\scene\Cubemap.cpp" />
     <ClCompile Include="src\scene\light\PointLight.cpp" />
-    <ClCompile Include="src\scene\LocalTexture.cpp" />
     <ClCompile Include="src\scene\model\geometry\Geometry.cpp" />
     <ClCompile Include="src\scene\model\geometry\Patch.cpp" />
     <ClCompile Include="src\scene\model\geometry\Polygonal.cpp" />
@@ -304,6 +303,7 @@
     <ClCompile Include="src\scene\SceneApproximation.cpp" />
     <ClCompile Include="src\scene\SceneChild.cpp" />
     <ClCompile Include="src\scene\Skybox.cpp" />
+    <ClCompile Include="src\scene\texture\Texture.cpp" />
     <ClCompile Include="src\scene\transformations\LocallyMovable.cpp" />
     <ClCompile Include="src\scene\transformations\Positionable.cpp" />
     <ClCompile Include="src\scene\transformations\Rotatable.cpp" />
