--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -202,7 +202,6 @@
     <ClInclude Include="src\render\controllers\RenderController.h" />
     <ClInclude Include="src\render\gltexture\GLTexture.h" />
     <ClInclude Include="src\render\gltexture\GLTextureDataPreset.h" />
-    <ClInclude Include="src\render\gltexture\GLTextureFiltering.h" />
     <ClInclude Include="src\render\gltexture\GLTextureFormat.h" />
     <ClInclude Include="src\render\gltexture\GLTexturePreset.h" />
     <ClInclude Include="src\render\gltexture\GLTextureType.h" />
@@ -241,6 +240,7 @@
     <ClInclude Include="src\scene\SceneChild.h" />
     <ClInclude Include="src\scene\Skybox.h" />
     <ClInclude Include="src\scene\texture\Texture.h" />
+    <ClInclude Include="src\scene\texture\TextureFiltering.h" />
     <ClInclude Include="src\scene\transformations\LocallyMovable.h" />
     <ClInclude Include="src\scene\transformations\Positionable.h" />
     <ClInclude Include="src\scene\transformations\Rotatable.h" />
@@ -266,7 +266,6 @@
     <ClCompile Include="src\render\controllers\ShadowController.cpp" />
     <ClCompile Include="src\render\controllers\SkyboxController.cpp" />
     <ClCompile Include="src\render\gltexture\GLTexture.cpp" />
-    <ClCompile Include="src\render\gltexture\GLTextureFiltering.cpp" />
     <ClCompile Include="src\render\gltexture\GLTextureFormat.cpp" />
     <ClCompile Include="src\render\gltexture\GLTexturePreset.cpp" />
     <ClCompile Include="src\render\gltexture\GLTextureType.cpp" />
@@ -304,6 +303,7 @@
     <ClCompile Include="src\scene\SceneChild.cpp" />
     <ClCompile Include="src\scene\Skybox.cpp" />
     <ClCompile Include="src\scene\texture\Texture.cpp" />
+    <ClCompile Include="src\scene\texture\TextureFiltering.cpp" />
     <ClCompile Include="src\scene\transformations\LocallyMovable.cpp" />
     <ClCompile Include="src\scene\transformations\Positionable.cpp" />
     <ClCompile Include="src\scene\transformations\Rotatable.cpp" />
