Added an XOR texture generator

--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="src\scene\SceneApproximation.h" />
     <ClInclude Include="src\scene\SceneChild.h" />
     <ClInclude Include="src\scene\Skybox.h" />
+    <ClInclude Include="src\scene\texture\Generators.h" />
     <ClInclude Include="src\scene\texture\Texture.h" />
     <ClInclude Include="src\scene\texture\TextureFiltering.h" />
     <ClInclude Include="src\scene\transformations\LocallyMovable.h" />
@@ -302,6 +303,7 @@
     <ClCompile Include="src\scene\SceneApproximation.cpp" />
     <ClCompile Include="src\scene\SceneChild.cpp" />
     <ClCompile Include="src\scene\Skybox.cpp" />
+    <ClCompile Include="src\scene\texture\Generators.cpp" />
     <ClCompile Include="src\scene\texture\Texture.cpp" />
     <ClCompile Include="src\scene\texture\TextureFiltering.cpp" />
     <ClCompile Include="src\scene\transformations\LocallyMovable.cpp" />
