--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -330,6 +330,9 @@
     <ClInclude Include="src\scene\texture\TextureFiltering.h">
       <Filter>Header Files\scene\texture</Filter>
     </ClInclude>
+    <ClInclude Include="src\scene\texture\Generators.h">
+      <Filter>Header Files\scene\texture</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine.cpp">
@@ -513,6 +516,9 @@
       <Filter>Source Files\scene\texture</Filter>
     </ClCompile>
     <ClCompile Include="src\scene\texture\TextureFiltering.cpp">
+      <Filter>Source Files\scene\texture</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\texture\Generators.cpp">
       <Filter>Source Files\scene\texture</Filter>
     </ClCompile>
   </ItemGroup>
