--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -585,23 +585,20 @@
     <None Include="resources\shaders\model\normal\draw.frag">
       <Filter>Resource Files\shaders\model\normal</Filter>
     </None>
+    <None Include="src\render\gltexture\gltextureformat_preprocessor\generate_TextureFormats.py">
+      <Filter>Source Files\render\gltexture\gltextureformat_preprocessor</Filter>
+    </None>
     <None Include="resources\shaders\postprocess\compositor.frag">
       <Filter>Resource Files\shaders\postprocess</Filter>
     </None>
-    <None Include="resources\shaders\postprocess\compositor.vert">
+    <None Include="resources\shaders\postprocess\default.geom">
+      <Filter>Resource Files\shaders\postprocess</Filter>
+    </None>
+    <None Include="resources\shaders\postprocess\default.vert">
       <Filter>Resource Files\shaders\postprocess</Filter>
     </None>
     <None Include="resources\shaders\postprocess\normal.frag">
       <Filter>Resource Files\shaders\postprocess</Filter>
-    </None>
-    <None Include="resources\shaders\postprocess\normal.vert">
-      <Filter>Resource Files\shaders\postprocess</Filter>
-    </None>
-    <None Include="resources\shaders\postprocess\normal.geom">
-      <Filter>Resource Files\shaders\postprocess</Filter>
-    </None>
-    <None Include="src\render\gltexture\gltextureformat_preprocessor\generate_TextureFormats.py">
-      <Filter>Source Files\render\gltexture\gltextureformat_preprocessor</Filter>
     </None>
   </ItemGroup>
 </Project>
