--- a/gameengine/shaders.rc
+++ b/gameengine/shaders.rc
@@ -8,6 +8,8 @@ RCID_TF_POSTPROCESS_COMPOSITOR_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/
 
 RCID_TF_POSTPROCESS_NORMAL_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess/normal.frag"
 
+RCID_TF_POSTPROCESS_NORMAL_SSRQUALITY_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/postprocess/normal_ssrquality.frag"
+
 //default
 RCID_TF_DEFAULT_FRAGSHADER RCT_TEXTFILE "../gameengine/resources/shaders/default.frag"
 RCID_TF_DEFAULT_VERTSHADER RCT_TEXTFILE "../gameengine/resources/shaders/default.vert"
