Renamed post process shader file from compositor to generic to better reflect its future use

--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -335,9 +335,9 @@
     <None Include="resources\shaders\model\textured.frag" />
     <None Include="resources\shaders\model\wireframe.frag" />
     <None Include="resources\shaders\model\wireframe.geom" />
-    <None Include="resources\shaders\postprocess\compositor.frag" />
     <None Include="resources\shaders\postprocess\default.geom" />
     <None Include="resources\shaders\postprocess\default.vert" />
+    <None Include="resources\shaders\postprocess\generic.frag" />
     <None Include="resources\shaders\postprocess\normal.frag" />
     <None Include="resources\shaders\postprocess\normal_ssrquality.frag" />
     <None Include="src\render\gltexture\gltextureformat_preprocessor\generate_TextureFormats.py" />
